[gd_scene load_steps=16 format=3 uid="uid://bdlndkgggxiop"]

[ext_resource type="Theme" uid="uid://e2qgxo4dwns7" path="res://resources/themes/hud.theme" id="1_ihu78"]
[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="2_tbg6n"]
[ext_resource type="Texture2D" uid="uid://bmpnwgv8mu8d8" path="res://resources/textures/ui/menu.atlastex" id="3_wj6gn"]
[ext_resource type="Texture2D" uid="uid://b0o3f3ngseds0" path="res://resources/textures/ui/music.atlastex" id="4_v3ol1"]
[ext_resource type="Texture2D" uid="uid://bbcbahq5qtgdo" path="res://resources/textures/ui/retry.atlastex" id="5_nst6h"]
[ext_resource type="Texture2D" uid="uid://dnlvhvj5d5jd7" path="res://resources/textures/ui/progress_bar_bg.atlastex" id="6_vck1s"]
[ext_resource type="Texture2D" uid="uid://dv87u42ccwly2" path="res://resources/textures/ui/progress_bar_fill.atlastex" id="7_ykfju"]
[ext_resource type="PackedScene" uid="uid://dwm4s271ncu03" path="res://scenes/ui/TimeDisplay.tscn" id="8_nnvyx"]
[ext_resource type="LabelSettings" uid="uid://cw0jk31bh5xpl" path="res://resources/themes/LabelSettingsHUD.tres" id="9_3h4mm"]

[sub_resource type="InputEventKey" id="InputEventKey_cnpcn"]
device = -1
physical_keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_w45l6"]
events = [SubResource("InputEventKey_cnpcn")]

[sub_resource type="InputEventKey" id="InputEventKey_dmpmk"]
device = -1
keycode = 77
unicode = 109

[sub_resource type="Shortcut" id="Shortcut_p1wex"]
events = [SubResource("InputEventKey_dmpmk")]

[sub_resource type="InputEventKey" id="InputEventKey_faaw0"]
device = -1
keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_uv3rv"]
events = [SubResource("InputEventKey_faaw0")]

[node name="Hud" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ihu78")
script = ExtResource("2_tbg6n")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 92.0
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="MenuButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Main menu"
focus_mode = 0
shortcut = SubResource("Shortcut_w45l6")
icon = ExtResource("3_wj6gn")

[node name="MusicButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Toggle music"
focus_mode = 0
shortcut = SubResource("Shortcut_p1wex")
icon = ExtResource("4_v3ol1")

[node name="RetryButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Restart level"
focus_mode = 0
shortcut = SubResource("Shortcut_uv3rv")
icon = ExtResource("5_nst6h")

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="TextureProgressBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
value = 100.0
fill_mode = 3
texture_under = ExtResource("6_vck1s")
texture_progress = ExtResource("7_ykfju")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="TimeDisplay" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource("8_nnvyx")]
unique_name_in_owner = true
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level 1/9"
label_settings = ExtResource("9_3h4mm")
